--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
  <p2>scroll right</p2>
 
  <div class="pattern-1">
-    <img src="Frame 14.svg" alt="pattern-1">
+    <img src="Frame 14.png" alt="pattern-1">
    </div>
 
  <div class="pattern-2">
-    <img src="Frame 11.svg" alt="pattern-2">
+    <img src="Frame 11.png" alt="pattern-2">
    </div>
 
  <div class="pattern-3">
-    <img src="Frame 10.svg" alt="pattern-3">
+    <img src="Frame 10.png" alt="pattern-3">
    </div>
 
  <div class="pattern-4">
-    <img src="Frame 12.svg" alt="pattern-4">
+    <img src="Frame 12.png" alt="pattern-4">
    </div>
 
  <div class="pattern-5">
-    <img src="Frame 13.svg" alt="pattern-5">
+    <img src="Frame 13.png" alt="pattern-5">
    </div>
 
 </body>
