--- a/index.html
+++ b/index.html
@@ -2,41 +2,99 @@
 <html lang="en">
         <head>
             <title>pj4</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link href="https://typography-interaction.github.io/assets/styles/reset.css" rel="stylesheet">
-            <link rel="stylesheet" media="screen and (min-width: 600px)" href="style.css">
-            <link rel="stylesheet" media="print" href="style.css">
-            <link rel="stylesheet" media="screen and (max-width: 600px)" href="mobile.css">
-        </head>
+               <meta charset="utf-8">
+               <meta name="viewport" content="width=device-width, initial-scale=1">
+               <link href="reset.css" rel="stylesheet">
+               <link href="style.css" rel="stylesheet">
+               <script defer src="arena.js"></script>
+            </head>
 <body>
  <p>are.na</p>
- <p1>pattern collection</p1>
  
  <div class="frame">
  <img src="Frame 15.svg" alt="frame">
 </div>
 
- <p2>scroll right</p2>
+<section>
+      <!-- Replace this URL with your channel to connect the API! -->
+      <a href="https://www.are.na/sanjana-mohan/patterns-t1tktyxby1i" id="channel-url">
+         <h1 class="channel-title"></h1> <!-- The channel title will be inserted inside this h1. -->
+      </a>
+</section>
 
- <div class="pattern-1">
-    <img src="Frame 14.jpg" alt="pattern-1">
-   </div>
-
- <div class="pattern-2">
-    <img src="Frame 11.jpg" alt="pattern-2">
-   </div>
-
- <div class="pattern-3">
-    <img src="Frame 10.jpg" alt="pattern-3">
-   </div>
-
- <div class="pattern-4">
-    <img src="Frame 12.jpg" alt="pattern-4">
-   </div>
-
- <div class="pattern-5">
-    <img src="Frame 13.jpg" alt="pattern-5">
-   </div>
+   <section>
+      <!-- All the channel “blocks” will be created as children, here. -->
+      <!-- You could move the classes to different section elements to separate the types! -->
+      <ul class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
+      </ul>
+   </section>
+   <!-- These are the templates for the various block types, below. -->
+   <!-- You can move/nest/remove any of the insertion points! -->
+   <!-- For example, you could only show images for actual image blocks. -->
+   <!-- You could not show the type if you group them by section, above. -->
+   <!-- Template for the channel owner. -->
+   
+  
+    <!-- Uploaded audio files. -->
+   <template id="audio-file-block">
+      <li>
+         <figure class="audio-file-block">
+            <picture>
+               <source class="image-thumb">
+               <source class="image-square">
+               <source class="image-display">
+               <img class="image">
+            </picture>
+            <audio class="audio" controls></audio> <!-- Audio source inserts here. -->
+         </figure>
+      </li>
+   </template>
+   <!-- Images. -->
+   <template id="image-block">
+      <li>
+         <figure class="image-block">
+            <picture>
+               <source class="image-thumb">
+               <source class="image-square">
+               <source class="image-display">
+               <img class="image">
+            </picture>
+            <a class="link">
+            </a>
+         </figure>
+      </li>
+   </template>
+   <!-- Links (saved sites). -->
+   <template id="link-block">
+      <li>
+         <figure class="link-block">
+            <picture>
+               <source class="image-thumb">
+               <source class="image-square">
+               <source class="image-display">
+               <img class="image">
+            </picture>
+            <a class="link">
+            </a>
+         </figure>
+      </li>
+   </template>
+   
+  
+   <!-- Uploaded video files. -->
+   <template id="video-file-block">
+      <li>
+         <figure class="video-file-block">
+            <picture>
+               <source class="image-thumb">
+               <source class="image-square">
+               <source class="image-display">
+               <img class="image">
+            </picture>
+            <video class="video" controls></video> <!-- Video source inserts here. -->
+         </figure>
+      </li>
+   </template>
 
 </body>
 </html>
