--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                <script defer src="arena.js"></script>
             </head>
 <body>
- <p>are.na</p>
+ <h2>are.na</h2>
  
  <div class="frame">
  <img src="Frame 15.svg" alt="frame">
