--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 <body>
  <h2>are.na</h2>
  
- <div class="frame">
- <img src="Frame 15.svg" alt="frame">
-</div>
-
 <section>
       <!-- Replace this URL with your channel to connect the API! -->
       <a href="https://www.are.na/sanjana-mohan/patterns-t1tktyxby1i" id="channel-url">
@@ -22,12 +18,18 @@
       </a>
 </section>
 
+<section>
+   <ul class="audio-file-blocks">
+   </ul>
+</section>
+
    <section>
       <!-- All the channel “blocks” will be created as children, here. -->
       <!-- You could move the classes to different section elements to separate the types! -->
-      <ul class="audio-embed-blocks audio-file-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
+      <ul class="audio-embed-blocks image-blocks embed-blocks link-blocks pdf-blocks text-blocks video-embed-blocks video-file-blocks">
       </ul>
    </section>
+
    <!-- These are the templates for the various block types, below. -->
    <!-- You can move/nest/remove any of the insertion points! -->
    <!-- For example, you could only show images for actual image blocks. -->
@@ -57,13 +59,11 @@
                <source class="image-thumb">
                <source class="image-square">
                <source class="image-display">
-               <img class="image">
+               <img class="image-square">
             </picture>
-            <a class="link">
-            </a>
-         </figure>
-      </li>
-   </template>
+            <a class="link"> </a>
+         </li>
+            </template>
    <!-- Links (saved sites). -->
    <template id="link-block">
       <li>
@@ -72,7 +72,7 @@
                <source class="image-thumb">
                <source class="image-square">
                <source class="image-display">
-               <img class="image">
+               <img class="image-square">
             </picture>
             <a class="link">
             </a>
@@ -89,7 +89,7 @@
                <source class="image-thumb">
                <source class="image-square">
                <source class="image-display">
-               <img class="image">
+               <img class="image-square">
             </picture>
             <video class="video" controls></video> <!-- Video source inserts here. -->
          </figure>
