--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
                <meta charset="utf-8">
                <meta name="viewport" content="width=device-width, initial-scale=1">
                <link href="reset.css" rel="stylesheet">
+               <link rel="stylesheet" href="style.css">
+               <!-- <link rel="stylesheet" media="screen and (max-width: 600px)" href="mobile.css"> -->
                <link href="style.css" rel="stylesheet">
                <script defer src="arena.js"></script>
+               <script defer src="assets/main.js"></script>
             </head>
 <body>
- <h2>are.na</h2>
+ <h2>are.na patterns</h2>
  
 <section>
       <!-- Replace this URL with your channel to connect the API! -->
       <a href="https://www.are.na/sanjana-mohan/patterns-t1tktyxby1i" id="channel-url">
-         <h1 class="channel-title"></h1> <!-- The channel title will be inserted inside this h1. -->
       </a>
 </section>
 
@@ -49,6 +51,7 @@
             </picture>
             <audio class="audio" controls></audio> <!-- Audio source inserts here. -->
          </figure>
+            <p class="title"></p>
       </li>
    </template>
    <!-- Images. -->
@@ -59,8 +62,11 @@
                <source class="image-thumb">
                <source class="image-square">
                <source class="image-display">
-               <img class="image-square">
+
+               <a href="https://www.are.na/sanjana-mohan/patterns-t1tktyxby1i"><img class="image-square"></a>
             </picture>
+         </figure>
+
             <a class="link"> </a>
          </li>
             </template>
